# go-pttbbs

./: .dockerignore  .gitignore  .golangci.yaml  00-config-production.go.template  00-config.go  00-config.template.ini  01-config-docker.go.template  01-config.docker.ini  02-config-run.go.template  02-config.run.template.ini  Dockerfile  README.en.md  README.md  README.zh-TW.md  api.go  codecov.yml  config_util.go  docker-compose.yaml  docker-compose.yaml.template  docker_compose.env.template  errors.go  go.mod  go.sum  main.go  main_init.go  main_init_test.go  main_test.go  test_attempt_change_email_test.go  test_attempt_set_id_email_test.go  test_change_email_test.go  test_change_passwd_test.go  test_check_exists_user_test.go  test_get_article_test.go  test_get_email_token_info_test.go  test_get_favorites_test.go  test_get_token_info_test.go  test_get_user_test.go  test_index_test.go  test_is_board_valid_user_test.go  test_load_auto_complete_boards_test.go  (+14 more)
apidoc/: apidoc.all_guest.py  apidoc.full.py  apidoc.py  attempt_change_email.yaml  attempt_set_id_email.yaml  change_email.yaml  change_passwd.yaml  check_exists_user.yaml  create_article.yaml  create_board.yaml  create_comment.yaml  cross_post.yaml  delete_articles.yaml  edit_article.yaml  get_article.yaml  get_board_detail.yaml  get_email_token_info.yaml  get_fav.yaml  get_post_template.yaml  get_refresh_token_info.yaml  get_token_info.yaml  get_user.yaml  get_user_visit_count.yaml  index.yaml  is_board_valid_user.yaml  is_boards_valid_user.yaml  load_auto_complete_boards.yaml  load_board_summary.yaml  load_boards_by_bids.yaml  load_boards_by_class.yaml  load_bottom_articles.yaml  load_class_boards.yaml  load_full_class_boards.yaml  login.yaml  (+17 more)
(+604 files in other folders)
